--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.22.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
