--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "firebase": "^9.22.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -16,6 +20,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "swiper": "^6.8.4",
+    "typescript": "^5.1.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
